src/objects/Web_Resource_Link__c.object
<CustomObject>
    <fields>
        <fullName>DisplayName__c</fullName>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>The order in which the link should be sorted.</description>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                    <default>true</default>
                    <label>Edit</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Web_Resource__c</fullName>
        <label>Web Resource</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Web Resource Links</relationshipLabel>
        <relationshipName>Web_Resource_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Web Resource Link</label>
    <nameField>
        <displayFormat>RL {0}</displayFormat>
        <label>Resource Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Resource Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>